# CRT

./: .gitmodules  CMakeLists.txt  README.md
include/CRT/: Camera.hpp  Color.hpp  Material.hpp  Random.hpp  RayTracer.hpp  Window.hpp  World.hpp
include/CRT/gfx/: Shader.hpp  ShaderStage.hpp  Texture2D.hpp
include/CRT/io/: FileUtilities.hpp
include/CRT/math/: Math.hpp  Ray.hpp  Sphere.hpp
include/CRT/raii/: Glfw.hpp  ImGui.hpp
src/: CRT.cpp
src/gfx/: Shader.cpp  ShaderStage.cpp  Texture2D.cpp
src/math/: Ray.cpp
